--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,9 @@ docs/_build/
 .pybuilder/
 target/
 
-# Jupyter Notebook
+# Jupyter Notebooks
 .ipynb_checkpoints
+*.ipynb
 
 # IPython
 profile_default/
