--- a/data_processing/requirements.txt
+++ b/data_processing/requirements.txt
@@ -1,8 +1,12 @@
-aiohttp==3.11.13
-ipython==9.0.1
-joblib==1.4.2
-pandas==2.2.3
-python-dotenv==1.1.0
+aiohttp==3.12.13
+ipython==9.3.0
+joblib==1.5.1
+nest_asyncio==1.6.0
+numpy==2.3.1
+pandas==2.3.0
+pycountry==24.6.1
+pytest==8.4.1
+python-dotenv==1.1.1
 python_dateutil==2.9.0.post0
-scikit_learn==1.6.1
+scikit_learn==1.7.0
 tqdm==4.67.1
