--- a/database/requirements.txt
+++ b/database/requirements.txt
@@ -1,4 +1,4 @@
-pandas==2.2.3
-psycopg2-binary==2.9.10
-python-dotenv==1.1.0
-sqlite3==3.41.2
+numpy==2.3.1
+pandas==2.3.0
+python-dotenv==1.1.1
+rapidfuzz==3.13.0
