--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*json filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
 ai_data.json filter=lfs diff=lfs merge=lfs -text
 ai_data_players.json filter=lfs diff=lfs merge=lfs -text
