--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
         port: 22
         script: |
           cd /srv/BeneluxCS
+          git config pull.rebase false  # Prevents pull prompt
           git checkout main
           git pull origin main
           sudo systemctl restart beneluxcs.service
